--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,32 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
      <header class="header">
-      <div class="header__bar row">
         <h1 class="grid-6"><a href="/">曲当て掲示板</a></h1>
-        <div class="user_nav grid-6">
-          <a class="post" href="/tweets/new">投稿する</a>
-        </div>
+        <div class="users">
+         <% if user_signed_in? %>
+            <ul class="user__info">
+              <li>
+                <%= link_to  current_user.name, user_path(current_user.id) %>
+                </li>
+              <li>
+                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+              </li>
+             <li>
+        <%= link_to "新規投稿", new_tweet_path, class: "post" %>
+            </li>
+            </ul> 
+        <% else %>
+          <ul class="user__info">
+            <li>
+            <%= link_to "ログイン", new_user_session_path, class: "post" %>
+            </li>
+            <li>
+            <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+            </li>
+          </ul>
+        <% end %>
       </div>
     </header>
     <%= yield %>
