部分テンプレート

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -21,4 +21,9 @@
         </a>
       </span>
       <p><%= tweet.text %></p>
+        <div class="audio">
+     <audio src= "<%= "#{tweet.file}" %>" controls="">
+         <a src="<%= "#{tweet.file}" %>">ダウンロード</a>
+     </audio>
+     </div>
     </div >
