--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,5 +1,23 @@
     <%= form_with(model: tweet, local: true) do |form| %>
-      <%= form.label :file %>
+
+       <div class="wrapper">
+
+      <section class="main-controls">
+        <canvas class="visualizer" height="60px"></canvas>
+        <div id="buttons">
+          <button class="record">Record</button>
+          <button class="stop">Stop</button>
+        </div>
+      </section>
+
+      <section class="sound-clips">
+
+
+      </section>
+
+    </div>
+<%= javascript_pack_tag 'app.js' %>
+      <%#= form.label :file %>
       <%= form.file_field :file , :size => 140 %>
       <%= form.text_area :text, placeholder: "text", rows: "10" %>
       <%= form.submit "SEND" %>
