ビューファイルの修正

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -22,3 +22,5 @@
       <%= form.text_area :text, placeholder: "text", rows: "10" %>
       <%= form.submit "SEND" %>
     <% end %>
+
+    <h3>ジャンル選択機能追加予定</h3>
