--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
 <div class="message top">
-<p>曲当て掲示板は、思い出せないあの曲を、音声、テキストによって共有するサイトです。</p>
+<p>思い出せないあの曲を、鼻歌で載せて検索しよう！！</p>
 </div>
   <% @tweets.each do |tweet| %>
         <%= render partial: "tweet", locals: { tweet: tweet} %>
