--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -64,7 +64,6 @@ margin-right: 30px;
   color: #fff;
 }
 
-
 * {
   margin: 0;
   padding: 0;
@@ -116,7 +115,7 @@ canvas {
 
 button {
   font-size: 1rem;
-  background: #0088cc;
+  background: gray;
   text-align: center;
   color: white;
   border: none;
