--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>曲当て掲示板</title>
+    <title>鼻歌.com</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,11 +11,11 @@
 
   <body>
      <header class="header">
-        <h1 class="grid-6"><a href="/">曲当て掲示板</a></h1>
+        <h1 class="grid-6"><a href="/">鼻歌.com</a></h1>
          <% if user_signed_in? %>
             <ul class="user__info">
               <li>
-                <%= link_to  current_user.name, user_path(current_user.id) %>
+                <%= link_to  "#{current_user.name}さんのページ", user_path(current_user.id) %>
                 </li>
               <li>
                 <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
