Action Cableを用いたコメント機能実装

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -19,6 +19,6 @@
 <%= javascript_pack_tag 'app.js' %>
       <%#= form.label :file %>
       <%= form.file_field :file , :size => 140 %>
-      <%= form.text_area :text, placeholder: "text", rows: "10" %>
+      <%= form.text_area :text, placeholder: "ジャンル・時代・場所など", rows: "10" %>
       <%= form.submit "SEND" %>
     <% end %>
