--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -26,7 +26,7 @@
     <% else %>
       <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
     <% end %>
-      <div class="comments">
+      <div class="comments" id="comments">
       <h4>＜コメント一覧＞</h4>
       <% @comments.each do |comment| %>
         <p>
