--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,7 +1,6 @@
-  <div class="content_post" >
-  
+  <div class="content_post" id="content">
     <div class="more">
-      <ul class="more_list"
+      <ul class="more_list">
          <li>
         <%= link_to '詳細', tweet_path(tweet.id), method: :get %>
               <%# 詳細に飛ぶ際content_postをクリックしたら詳細に飛べるようにする %>
