--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,6 +1,26 @@
 <div class="contents row">
   <div class="container">
     <h3>投稿する</h3>
-        <%= render partial: "form", locals: { tweet: @tweet } %>
+      
+    <%= form_with(model: @tweet, local: true) do |form| %>
+      <%= render 'shared/error_messages', model: form.object %>
+       <div class="wrapper">
+
+      <section class="main-controls">
+        <canvas class="visualizer" height="60px"></canvas>
+        <div id="buttons">
+          <button class="record">Record</button>
+          <button class="stop">Stop</button>
+        </div>
+      </section>
+    </div>
+
+<%= javascript_pack_tag 'app.js' %>
+      <%= form.file_field :file , :size => 140 %>
+      <%= form.text_area :text, placeholder: "ジャンル・時代・場所など", rows: "10" %>
+      <%= form.submit "投稿する" %>
+       <%= form.collection_select(:check_id, Check.all, :id, :name, {}, {class:"check"}) %>
+       <p>※問題が解決しましたら、編集ボタンから「解決済」を選択してください</p>
+    <% end %>
   </div>
 </div>
