--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -13,6 +13,10 @@
           <button class="stop">Stop</button>
         </div>
       </section>
+    <section class="sound-clips">
+
+
+      </section>
     </div>
 
 <%= javascript_pack_tag 'app.js' %>
