--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -4,22 +4,21 @@ ul li {
 }
 
 body{
-  margin:100px 300px;
+  padding:100px 300px;
   bottom: 10px;
+  background-color:rgb(245, 241, 241); 
 }
 
 header.header {
-  padding: 13px;
-  background-color: gray;
+  background: black;
   position:absolute;
   top: 0;
   left: 0;
   right: 0;
-  height: 10px;
+  height: 15px;
   display: flex;
   justify-content: space-between;
 }
-
 
 .contents row{
   height: calc(100%-10px);
@@ -36,12 +35,11 @@ h1.grid-6 a {
   text-decoration:none;
 }
 div.contents.row div.content_post {
-  margin: 20px 0;
-  padding: 20px 20px 5px 20px;
+  padding: 10px 10px 5px 10px;
   position: relative;
   height: 100%;
   color: #000;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   background-size: cover;
   background-position: center center;
   border: 2px solid black;
@@ -49,8 +47,33 @@ div.contents.row div.content_post {
 }
 
 .user__info li {
-  margin-top: 10px;
+margin-top: 25px;
 margin-right: 30px;
+padding: 3px 10px;
+border: 1px solid black;
+}
+.user__info li:hover{
+  border-color: rgb(53, 208, 255);
+}
+
+p{
+  margin-bottom: 10px;
+}
+
+/* ここから下がボタンのCSS　*/
+
+
+
+a {
+text-decoration: none;
+color: black;
+}
+
+a:hover{
+    border-color: rgb(53, 208, 255);
+    outline-color: transparent;
+    outline-offset: 12px;
+    transform: scale(1);
 }
 
 .users{
@@ -58,13 +81,15 @@ margin-right: 30px;
 }
 
 .message.top p {
-  background-color:gray; 
+  background: gray;
   text-align: center;
   line-height: 50px;
   color: #fff;
 }
 
 
+
+/* 音声録音 */
 * {
   margin: 0;
   padding: 0;
@@ -168,23 +193,13 @@ audio {
 }
 
 button.delete {
-  background: #f00;
+  background: rgb(255, 0, 0);
   padding: 0.5rem 0.75rem;
   font-size: 0.8rem;
 }
 
 /* Checkbox hack to control information box display */
 
-label {
-  font-size: 3rem;
-  position: absolute;
-  top: 2px;
-  right: 3px;
-  z-index: 5;
-  cursor: pointer;
-  background-color: black;
-  border-radius: 10px;
-}
 
 input[type=checkbox] {
    position: absolute;
@@ -232,4 +247,42 @@ input[type=checkbox]:checked ~ aside {
     max-width: 1000px;
     margin: 0 auto;
   }
+}
+
+button {
+  text-align: center;
+  box-sizing: border-box;
+  /* overflow: hiddenにより上下位置にズレが生じるのでdisplay: blockのみ対応可 */
+  overflow: hidden;
+  display: block;
+  width: 300px;
+  margin: 30px auto;
+  /* その他スタイル */
+  position: relative;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1;
+  padding: 12px 20px;
+  border: 1px solid #447fff;
+  transition: color 0.5s ease-out;
+}
+
+textarea {
+  width: 100%;
+  margin-top: 10px;
+}
+
+input {
+margin: 10px;
+}
+
+.categry p {
+ display: inline-block;
+ background: rgba(255, 0, 0, 0.753);
+ padding: 3px 10px;
+ font-size: 10px;
+ border-radius: 2px;
+ color: black;
+ margin: 3px 0;
 }
