--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div class="contents row">
   <div class="container">
-    <h2>Sign up</h2>
+    <h2>新規登録</h2>
     <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
       <%= devise_error_messages! %>
 
          <div class="field">
-        <%= f.label :name %> <em>(6 characters maximum)</em><br />
+        <%= f.label :名前 %> <em>(6 characters maximum)</em><br />
         <%= f.text_field :name, autofocus: true, maxlength: "6" %>
       </div>
 
