--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>鼻歌.com</title>
+    <title>鼻歌掲示板</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,7 +10,7 @@
 
   <body>
      <header class="header">
-        <h1 class="grid-6"><a href="/">鼻歌.com</a></h1>
+        <h1 class="grid-6"><a href="/">鼻歌掲示板</a></h1>
 
          <% if user_signed_in? %>
             <ul class="user__info">
