--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,17 +1,14 @@
   <div class="content_post" id="content">
-    <div class="more">
-      <ul class="more_list">
-         <li>
-        <%= link_to '詳細', tweet_path(tweet.id), method: :get %>
-              <%# 詳細に飛ぶ際content_postをクリックしたら詳細に飛べるようにする %>
-          </li>
-        </ul>
-     </div>
-      <span class="name">
+  <div class="name_show">
+    <div class="name">
       <a href= "/users/<%= (tweet.user.id) %>">
           <span>投稿者</span><%= tweet.user.name %>
         </a>
-      </span>
+     </div>
+     <div class="show">
+        <%= link_to '詳細ページ', tweet_path(tweet.id), method: :get %>
+     </div>
+     </div>
       <p><%= tweet.text %></p>
         <div class="audio">
      <audio src= "<%= "#{tweet.file}" %>" controls="">
