--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
 <div class="message top">
-<p>思い出せないあの曲を、鼻歌共有で解決しよう！！</p>
+<p>思い出せないあの曲を、鼻歌を共有して解決しよう！！</p>
 </div>
   <div class="new_content" >
   <div class="categry">
